--- a/src/routes/var.scss
+++ b/src/routes/var.scss
@@ -2,4 +2,8 @@ $brown-old-paper: #F3CD98;
 $brown-rustic: #855141;
 $brown-cold: #241C1B;
 $compliment: #E9C249;
+$compliment-secondary: #ac9348;
 $gray-light: #52525B;
+$black-rustic: #241C1B;
+$darker-black-rustic: #0B0808;
+$darker-brown-rustic: #432921;
